syntax = "proto3";

option go_package = "./publicacao/publicacao";

package publicacao;

service PublicacaoService {
    rpc UpvotePublicacao (PublicacaoRequest) returns (PublicacaoResponse) {}
}

message PublicacaoRequest {
  int64 id = 1;
}

message PublicacaoResponse {
  int64 id = 1;
  string title = 2;
  string content = 3;
  int64 likes = 4;
  int64 dislike = 5;
}

//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative publicacao.proto
